--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "exifr": "^7.1.3",
     "framer-motion": "^11.0.0",
     "next": "^15.0.0",
     "next-themes": "^0.4.6",
