Update environment and Docker configuration

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@
 # For local dev: use localhost
 # For production with domain: use https://api.yourdomain.com
 # For production without domain (IP only): use http://YOUR_VM_IP/api
-NEXT_PUBLIC_API_BASE_URL=http://airu-portfolio-be:8080
+NEXT_PUBLIC_API_BASE_URL=/api
